# alegra-e-provider

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
alegra/: __init__.py  client.py  config.py  exceptions.py
alegra/models/: company.py  customer.py
alegra/resources/: base.py
tests/: test_company.py  test_invoice.py
tests/fixtures/vcr_cassettes/: test_create_company.yaml  test_create_credit_note.yaml  test_create_debit_note.yaml  test_create_invoice.yaml
