[build-system]
requires = ["setuptools", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "alegra-e-provider"
dynamic = ["version"]
description = "Alegra E-Provider, Python Wrapper for Alegra Electronic Provider API"
authors = [
    {name = "Luis Martinez"}
]
requires-python = ">=3.6, <3.14"
dependencies = [
    "pydantic[email]==2.8.2",
    "requests==2.32.3",
    "httpx==0.27.2",
]

[tool.setuptools.packages.find]
include = ["alegra", "alegra.*"]

[tool.setuptools.dynamic]
version = {attr = "versioneer.get_version"}

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "alegra/_version.py"
versionfile_build = "_version.py"
tag_prefix = ""


[tool.ruff]
extend-exclude = [
    "alegra/_version.py",
    "versioneer.py"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]